--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,16 @@
     <input type="text" placeholder="quote" name="quote">
     <button type="submit">Submit</button>
   </form>
-  <%= quotes %>
+  <h2>Quotes</h2>
+  <ul class="quotes">
+    <% for(var i = 0; i < quotes.length; i++) {%>
+      <li class="quote">
+        <!-- Output name from the iterated quote object -->
+        <span><%= quotes[i].name %></span>:
+        <!-- Output quote from the iterated quote object -->
+        <span><%= quotes[i].quote %></span>
+      </li>
+    <% } %>
+  </ul>
 </body>
 </html>
