--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="autumn">
 <head>
   <meta charset="UTF-8">
-  <title>MY APP</title>
+  <title>SW Quotes</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="h-full w-full">
