Changed theme, added images

--- a/public/styles.css
+++ b/public/styles.css
@@ -2493,6 +2493,16 @@ html {
   background-color: hsl(var(--n) / var(--tw-bg-opacity));
 }
 
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\/img\/bgStars\.jpg\'\)\] {
   background-image: url('/img/bgStars.jpg');
 }
