--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <title>SW Quotes</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
-<body class="h-auto w-full bg-[url('/img/bgStars.jpg')] bg-cover bg-center ">
+<body class="h-auto w-full bg-slate-600 ">
 
   <div class="navbar bg-base-100">
     <a class="btn btn-ghost normal-case text-xl">Star Wars Quote CRUD!</a>
