--- a/public/styles.css
+++ b/public/styles.css
@@ -1881,15 +1881,6 @@ html {
   gap: 0.5rem;
 }
 
-.footer-center {
-  place-items: center;
-  text-align: center;
-}
-
-.footer-center > * {
-  place-items: center;
-}
-
 @media (min-width: 48rem) {
   .footer {
     grid-auto-flow: column;
@@ -2267,10 +2258,6 @@ html {
   }
 }
 
-.rounded-box {
-  border-radius: var(--rounded-box, 1rem);
-}
-
 .input-xs {
   height: 1.5rem;
   padding-left: 0.5rem;
@@ -2361,10 +2348,6 @@ html {
   margin-bottom: 2.5rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
-}
-
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -2377,16 +2360,8 @@ html {
   margin-right: 1.25rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .flex {
@@ -2397,28 +2372,16 @@ html {
   display: grid;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-1\/4 {
-  height: 25%;
-}
-
-.h-1\/5 {
-  height: 20%;
-}
-
 .h-1\/6 {
   height: 16.666667%;
 }
 
 .h-auto {
   height: auto;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .w-1\/2 {
@@ -2433,10 +2396,6 @@ html {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
-}
-
 .grid-flow-col {
   grid-auto-flow: column;
 }
@@ -2445,32 +2404,20 @@ html {
   flex-direction: column;
 }
 
-.items-center {
-  align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
-}
-
 .justify-center {
   justify-content: center;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-0 {
   gap: 0px;
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.gap-4 {
+  gap: 1rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .bg-base-100 {
@@ -2483,28 +2430,14 @@ html {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-primary {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--p) / var(--tw-bg-opacity));
-}
-
 .bg-neutral {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--n) / var(--tw-bg-opacity));
 }
 
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.bg-\[url\(\'\/img\/bgStars\.jpg\'\)\] {
-  background-image: url('/img/bgStars.jpg');
 }
 
 .bg-\[url\(\'\/img\/swBG\.jpg\'\)\] {
@@ -2515,80 +2448,28 @@ html {
   background-size: cover;
 }
 
-.bg-auto {
-  background-size: auto;
+.bg-\[center_-1rem\] {
+  background-position: center -1rem;
 }
 
 .bg-center {
   background-position: center;
 }
 
-.bg-\[center_top_1rem\] {
-  background-position: center top 1rem;
-}
-
-.bg-\[center_top_2rem\] {
-  background-position: center top 2rem;
-}
-
-.bg-\[center_bottom_2rem\] {
-  background-position: center bottom 2rem;
-}
-
-.bg-\[center_bottom_\.5rem\] {
-  background-position: center bottom .5rem;
-}
-
-.bg-\[center_bottom_1rem\] {
-  background-position: center bottom 1rem;
-}
-
-.bg-\[center_1rem\] {
-  background-position: center 1rem;
-}
-
-.bg-\[center_2rem\] {
-  background-position: center 2rem;
-}
-
-.bg-\[center_\.5rem\] {
-  background-position: center .5rem;
-}
-
-.bg-\[center_-\.5rem\] {
-  background-position: center -.5rem;
-}
-
-.bg-\[center_-1rem\] {
-  background-position: center -1rem;
-}
-
-.bg-repeat {
-  background-repeat: repeat;
-}
-
 .bg-no-repeat {
   background-repeat: no-repeat;
-}
-
-.bg-repeat-y {
-  background-repeat: repeat-y;
 }
 
 .fill-current {
   fill: currentColor;
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
 .p-0 {
   padding: 0px;
+}
+
+.p-10 {
+  padding: 2.5rem;
 }
 
 .text-center {
@@ -2605,12 +2486,13 @@ html {
   line-height: 1.75rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .normal-case {
   text-transform: none;
+}
+
+.text-neutral-content {
+  --tw-text-opacity: 1;
+  color: hsl(var(--nc) / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -2618,14 +2500,8 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-primary-content {
-  --tw-text-opacity: 1;
-  color: hsl(var(--pc) / var(--tw-text-opacity));
-}
-
-.text-neutral-content {
-  --tw-text-opacity: 1;
-  color: hsl(var(--nc) / var(--tw-text-opacity));
+.no-underline {
+  text-decoration-line: none;
 }
 
 .shadow-xl {
@@ -2637,13 +2513,5 @@ html {
 @media (min-width: 768px) {
   .md\:mb-5 {
     margin-bottom: 1.25rem;
-  }
-
-  .md\:place-self-center {
-    place-self: center;
-  }
-
-  .md\:justify-self-end {
-    justify-self: end;
   }
 }
