--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
 
   <section class="text-3xl w-full h-1/6 p-10 bg-black mb-10">
-    <h1 class="text-white"> May Node and Express be with you...</h1>
+    <h1 class="text-white"> May Node and Express be <a id="wLink" class="link no-underline">w</a>ith you...</h1>
   </section>
 
   <section class="flex mb-10 mx-5 justify-center">
